# prisma-desktop

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  vite.config.js
.claude/: CLAUDE.md
.github/: FUNDING.yml
.github/workflows/: android.yml  ci.yml  ios.yml  release.yml
docs/: ontologia.md
docs/diagrams/: 01_system_topology.html  01_system_topology.py  02_deployment.html  02_deployment.py  03_ui_interaction_flow.py  03a_open_stream.html  03b_vault_search.html  03c_dev_hot_reload.html  gen.sh
docs/reflection/: module-map.html  module-map.py
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/routes/: +page.svelte
