[project]
name = "prisma-desktop-sidecar"
version = "0.1.0"
description = "Python sidecar for prisma-desktop Tauri app"
requires-python = ">=3.12"

# Runtime: prisma Python backend (includes docu-craft as a dep).
# Install from local source during development:
#   pip install -e ../../prisma
#   pip install -e ../../docu-craft
dependencies = [
    "prisma",
    "docu-craft",
]

[project.optional-dependencies]
# Dev tooling only — never shipped in the sidecar binary.
# Install from local source:
#   pip install -e '../../sysatlas[reflect-rust]'
dev = [
    "sysatlas[reflect-rust]",
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
